[package]
name = "gotp"
version = "0.1.1"
authors = ["Gergely Brautigam <skarlso777@gmail.com>"]
description = "Generate totp codes for various accounts which are saved and AES encrypted."
documentation = "https://github.com/Skarlso/totp/blob/master/README.md"
homepage = "https://github.com/Skarlso/totp"
repository = "https://github.com/Skarlso/totp"
readme = "README.md"
keywords = ["totp", "otp", "aes", "account"]
categories = ["command-line-interface"]
license-file = "LICENSE"
[badges]
travis-ci = { repository = "Skarlso/totp", branch = "master" }
is-it-maintained-issue-resolution = { repository = "Skarlso/totp" }
is-it-maintained-open-issues = { repository = "Skarlso/totp" }
maintenance = { status = "actively-developed" }

[dependencies]
clap = {version = "2.31", features = ["yaml"]}
chrono = "0.4"
data-encoding = "2.1.1"
rust-crypto = "^0.2"
byteorder = "1"
openssl = "0.10.10"
hex = "0.3.2"
rpassword = "2.0.0"

